--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -29,15 +29,15 @@
 \textbf{Resumen}
 \end{center}
 
-En este articulo aprenderemos sobre el concepto de SQL y NoSQL, como también sus ventajas y desventajas, lo cual nos permitirá aclarar las diferencias que existen entre ambas y elegir la mejor base de datos que se adapte a su negocio.\\
+En el presente articulo se relata la comparación hecha de bases de datos NoSQL, describiéndolas y analizando su importancia, así como las definiciones de tipos de bases de datos NoSQL, con el fin de proporcionar un punto de partida para los trabajos en esta área. Y también la creación de una base de datos, inserción y consultas de datos NoSQL mediante Docker.\\
 
-\textbf{Palabras clave:}   sql, nosql, base de datos.\\
+\textbf{Palabras clave:}   NoSQL, Bases de datos, Docker.\\
 
 \begin{center}
 \textbf{Abstract}
 \end{center}
-In this article we will learn about the concept of SQL and NoSQL, as well as its advantages and disadvantages, which will allow us to clarify the differences between the two and choose the best database that suits your business.\\
-\textbf{Keywords:}   sql, nosql, databases.\\
+In the present article the comparison made of NoSQL databases is described, describing them and analyzing their importance, as well as the definitions of NoSQL database types, in order to provide a starting point for work in this area. And also the creation of a database, insertion and queries of NoSQL data through Docker.\\
+\textbf{Keywords:}  NoSQL, Databases, Docker.\\
 
 \end{abstract}
 
@@ -49,6 +49,11 @@ In this article we will learn about the concept of SQL and NoSQL, as well as its
 
 \section {Introducción}\label{sec:1}
 
+Dia a día el manejo de la información se hace más complejo; diferentes factores hacen que las personas involucradas en el área busquen tecnologías que le ayuden con este problema. Las bases de datos relacionales son las mas comunes, pero en los últimos años ha aumentado el interés por las bases de datos NoSQL (Not only SQL), un nuevo conjunto de tecnologías que pueden contribuir al manejo de información.
+Por lo anterior, el presente documento hace una revisión de las tecnologías NoSQL, haciendo posible hacer una comparación.\\
+
+\par El resto de este articulo está organizado de la siguiente manera. En la Sección 2 se muestra los matriales y métodos usados para el desarrollo de este articulo. La Sección 3 se explican los resultados. Y finalmente, las conclusiones están en la Sección 4.
+
 
 
 %-----------------------------------------------------------------
@@ -57,13 +62,18 @@ In this article we will learn about the concept of SQL and NoSQL, as well as its
 
 %-----------------------------------------------------------------
 \section {Resultados}\label{sec:3}
+\subsection{Creacion de base de datos NoSQL}
+\subsection{Inserción y consulta de datos}
+\subsection{Comparación}
+\subsection{Documental}
+\subsection{Clave-Valor}
+\subsection{Grafos}
+\subsection{Tabular (Column-Store)}
 
+\subsection{Comparación}
 %-----------------------------------------------------------------
-\section {Discusión}\label{sec:4}
+\section{Discusión y Conclusiones}\label{sec:4}
 
-
-%-----------------------------------------------------------------
-\section{Conclusiones}\label{sec:5}
 
 
 
