--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -50,7 +50,7 @@ In the present article the comparison made of NoSQL databases is described, desc
 \section {Introducción}\label{sec:1}
 
 Dia a día el manejo de la información se hace más complejo; diferentes factores hacen que las personas involucradas en el área busquen tecnologías que le ayuden con este problema. Las bases de datos relacionales son las mas comunes, pero en los últimos años ha aumentado el interés por las bases de datos NoSQL (Not only SQL), un nuevo conjunto de tecnologías que pueden contribuir al manejo de información.
-Por lo anterior, el presente documento hace una revisión de las tecnologías NoSQL, haciendo posible hacer una comparación.\\
+\par Por lo anterior, el presente documento hace una revisión de las tecnologías NoSQL, haciendo posible hacer una comparación.\\
 
 \par El resto de este articulo está organizado de la siguiente manera. En la Sección 2 se muestra los matriales y métodos usados para el desarrollo de este articulo. La Sección 3 se explican los resultados. Y finalmente, las conclusiones están en la Sección 4.
 
@@ -58,8 +58,16 @@ Por lo anterior, el presente documento hace una revisión de las tecnologías No
 
 %-----------------------------------------------------------------
 \section{Materiales y Métodos}\label{sec:2}
-
-
+\subsection{Materiales}
+	\begin{itemize}
+		\item Virtualización activada en el BIOS
+		\item Docker Desktop
+		\item Windows 10 64bit: Pro, Enterprise o Education, con al menos 4GB de RAM.
+	\end{itemize}
+\subsection{Métodos}
+	\begin{itemize}
+		\item Se utilizo como material artículos y libros relacionados a la base de datos NoSQL y sus tipos, así como páginas web.
+	\end{itemize}
 %-----------------------------------------------------------------
 \section {Resultados}\label{sec:3}
 \subsection{Creacion de base de datos NoSQL}
@@ -70,11 +78,18 @@ Por lo anterior, el presente documento hace una revisión de las tecnologías No
 \subsection{Grafos}
 \subsection{Tabular (Column-Store)}
 
-\subsection{Comparación}
+\subsection{Comparación entre BD Documental y Clave-Valor}
+		\begin{center}
+		\includegraphics[width=10cm]{./Imagenes/cuadro}
+		\end{center}	
 %-----------------------------------------------------------------
 \section{Discusión y Conclusiones}\label{sec:4}
 
+	\begin{itemize}
+		\item NoSQL permite el manejo de grandes volúmenes de datos y la posibilidad de tener un sistema distribuido.
+		\item Las características de las bases de datos NoSQL responden a las necesidades actuales de las diferentes organizaciones, por lo que son una alternativa debido a su capacidad y a la velocidad.
 
+	\end{itemize}
 
 
 % Bibliografia.
