--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -15,7 +15,7 @@
 
 
 \title{Comparación BD NoSQL}
-\author{Virginia Aquino Huallpa}
+\author{Yaneth Virginia Aquino Huallpa}
 \author{Arlyn Cotrado Coaquira}
 \author{Sharon Sosa Bedoya}
 \author{Marlon Villegas Arando}
@@ -69,7 +69,46 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\item Se utilizo como material artículos y libros relacionados a la base de datos NoSQL y sus tipos, así como páginas web.
 	\end{itemize}
 %-----------------------------------------------------------------
-\section {Resultados}\label{sec:3}
+\section{Marco Teórico}\label{sec:3}
+\subsection{Base de datos}
+	\begin{itemize}
+		\item Una base de datos es una colección de datos organizados según un determinado criterio
+		\item Estos datos se pueden leer, crear, actualizar y borrar
+		\item También existen motores de base de datos que nos permiten hacer todas estas operaciones de forma más fácil
+	\end{itemize}
+\subsection{Tipos de base de datos}
+	\begin{itemize}
+		\item Existen distintos tipos de bases de datos que se utilizan para solucionar distintos tipos de problemas
+                     \item Dentro de la gran familias de bases de datos podemos encontrar las del tipo base de datos relacionales y las no relacionales
+		\item Las bases de datos relacionales se conocen generalmente como las SQL
+		\item Las no relacionales se conocen como NoSQL
+		\item Cada tipo de base de datos tiene beneficios y contras a la hora de almacenar, leer, actualizar o borar los datos
+	\end{itemize}
+\subsection{Bases de datos relacional}
+	\begin{itemize}
+		\item Desde su definición vemos que una base de datos puede ser relacional si cumple con algo conocido como el modelo relacional.
+                     \item En la definición de modelo relacional nos podemos quedar con la idea de tablas que tienen columnas para describir los datos que están relacionados entre si.
+		\item Ejemplo modelo relacional:
+                     \begin{center}
+		\includegraphics[width=8cm]{./Imagenes/1}
+		\end{center}	
+	\end{itemize}
+\subsection{Modelo NoSQL}
+	\begin{itemize}
+		\item Se conoce como NoSQL (Not Only SQL) al grupo de bases de datos que no son relacionales
+                     \item Dentro de esta clasificación se encuentran las bases de clave/valor, orientadas a documentos, grafos, de grandes columnas .
+                     \begin{center}
+		\includegraphics[width=8cm]{./Imagenes/2}
+		\end{center}	
+		\item Este tipo de bases de datos escala de forma horizontal
+		\item Podemos utilizar muchas máquinas chiquitas para crecer y satisfacer las necesidades de los negocios actuales.
+                     \begin{center}
+		\includegraphics[width=5cm]{./Imagenes/3}
+		\end{center}	
+	
+	\end{itemize}
+%-----------------------------------------------------------------
+\section {Resultados}\label{sec:4}
 \subsection{Creacion de base de datos NoSQL}
 \subsection{Inserción y consulta de datos}
 \subsection{Comparación}
@@ -83,7 +122,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\includegraphics[width=10cm]{./Imagenes/cuadro}
 		\end{center}	
 %-----------------------------------------------------------------
-\section{Discusión y Conclusiones}\label{sec:4}
+\section{Discusión y Conclusiones}\label{sec:5}
 
 	\begin{itemize}
 		\item NoSQL permite el manejo de grandes volúmenes de datos y la posibilidad de tener un sistema distribuido.
