--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -90,7 +90,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
                      \item En la definición de modelo relacional nos podemos quedar con la idea de tablas que tienen columnas para describir los datos que están relacionados entre si.
 		\item Ejemplo modelo relacional:
                      \begin{center}
-		\includegraphics[width=8cm]{./Imagenes/1}
+		\includegraphics[width=7cm]{./Imagenes/1}
 		\end{center}	
 	\end{itemize}
 \subsection{Modelo NoSQL}
@@ -98,12 +98,12 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\item Se conoce como NoSQL (Not Only SQL) al grupo de bases de datos que no son relacionales
                      \item Dentro de esta clasificación se encuentran las bases de clave/valor, orientadas a documentos, grafos, de grandes columnas .
                      \begin{center}
-		\includegraphics[width=8cm]{./Imagenes/2}
+		\includegraphics[width=7cm]{./Imagenes/2}
 		\end{center}	
 		\item Este tipo de bases de datos escala de forma horizontal
 		\item Podemos utilizar muchas máquinas chiquitas para crecer y satisfacer las necesidades de los negocios actuales.
                      \begin{center}
-		\includegraphics[width=5cm]{./Imagenes/3}
+		\includegraphics[width=6cm]{./Imagenes/3}
 		\end{center}	
 	
 	\end{itemize}
@@ -115,8 +115,26 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 \subsection{Documental}
 \subsection{Clave-Valor}
 \subsection{Grafos}
+\begin{itemize}
+		\item Estas bases de datos utilizan el modelo de Grafos
+		\item Se especializan en relaciones
+		\item Las podemos utilizar por ejemplo para guardar puntos de un camino, relaciones de amigos, familia, o cualquier tipo de dato que represente alguna relación
+                     \item Entre los motores más conocidos de este tipo se encuentra Neo4j
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/4}
+		\end{center}	
+	          \end{itemize}
 \subsection{Tabular (Column-Store)}
-
+\begin{itemize}
+		\item Este tipo de familia de bases de datos está orientada a grandes cantidades de datos
+		\item Lo datos son almacenados en columnas
+		\item En una columna tiene múltiples datos
+                     \item Entre los motores más conocidos de este tipo se encuentra Cassandra o HBase 
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/5}
+		\end{center}	
+	          \end{itemize}
+                   
 \subsection{Comparación entre BD Documental y Clave-Valor}
 		\begin{center}
 		\includegraphics[width=10cm]{./Imagenes/cuadro}
