--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -109,7 +109,27 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 	\end{itemize}
 %-----------------------------------------------------------------
 \section {Resultados}\label{sec:4}
-\subsection{Creacion de base de datos NoSQL}
+\subsection{Creacion de base de datos NoSQL con MongoDB}
+\begin{itemize}
+		\item MongoDB es una base NoSQL orientada a documentos
+		\item Permite guardar documentos en formato de JSON
+		\item Tiene esquema flexible, es decir que podemos cambiar la estructura de nuestros documentos sin ningún problema
+                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \item Dado que aprendimos ECMAScript vamos a utilizar un motor de base de datos que nos permite seguir utilizando este lenguaje para guardar nuestros datos.
+  \end{itemize}
+\subsection{Instalar MongoDB}
+\begin{itemize}
+		\item Para instalar MongoDB primero tenemos que ejecutar el siguiente codigo.
+                     \begin{center}
+		\includegraphics[width=8cm]{./Imagenes/6}
+		\end{center}	
+		\item Vamos a elegir la versión de Community Server
+		\item Seleccionamos Windows.Elegimos la versión Windows Server 2008 R2 64-bits and later, with SSL support x64
+                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/4}
+		\end{center}	
+	          \end{itemize}
 \subsection{Inserción y consulta de datos}
 \subsection{Comparación}
 \subsection{Documental}
@@ -118,7 +138,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 \begin{itemize}
 		\item Estas bases de datos utilizan el modelo de Grafos
 		\item Se especializan en relaciones
-		\item Las podemos utilizar por ejemplo para guardar puntos de un camino, relaciones de amigos, familia, o cualquier tipo de dato que represente alguna relación
+		\item Las podemos utilizar por ejemplo para guardar puntos de un camino, relaciones de amigos, familia, o cualquier tipo de  dato que represente alguna relación
                      \item Entre los motores más conocidos de este tipo se encuentra Neo4j
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/4}
@@ -133,8 +153,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/5}
 		\end{center}	
-	          \end{itemize}
-                   
+	          \end{itemize} 
 \subsection{Comparación entre BD Documental y Clave-Valor}
 		\begin{center}
 		\includegraphics[width=10cm]{./Imagenes/cuadro}
