--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -130,7 +130,26 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
                       \begin{center}
 		\includegraphics[width=8cm]{./Imagenes/7}
 		\end{center}	
-		\item Seleccionamos Windows.Elegimos la versión Windows Server 2008 R2 64-bits and later, with SSL support x64
+		\item Verificar que el contenedor se este ejecutando correctamente mediante el comando:
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/9}
+		\end{center}	
+                     \item Proceder a verificar la imagen con el siguiente comando:
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/10}
+		\end{center}	
+                     \item Descargamos un fichero JSON  para subir luego a una base MongoDB:
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/10}
+		\end{center}	
+                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/7}
+		\end{center}	
+                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \begin{center}
+		\includegraphics[width=6cm]{./Imagenes/7}
+		\end{center}	
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/7}
