--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -90,7 +90,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
                      \item En la definición de modelo relacional nos podemos quedar con la idea de tablas que tienen columnas para describir los datos que están relacionados entre si.
 		\item Ejemplo modelo relacional:
                      \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/1}
+		\includegraphics[width=9cm]{./Imagenes/1}
 		\end{center}	
 	          \end{itemize}
 \subsection{Modelo NoSQL}
@@ -98,12 +98,12 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\item Se conoce como NoSQL (Not Only SQL) al grupo de bases de datos que no son relacionales
                      \item Dentro de esta clasificación se encuentran las bases de clave/valor, orientadas a documentos, grafos, de grandes columnas .
                      \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/2}
+		\includegraphics[width=8cm]{./Imagenes/2}
 		\end{center}	
 		\item Este tipo de bases de datos escala de forma horizontal
 		\item Podemos utilizar muchas máquinas chiquitas para crecer y satisfacer las necesidades de los negocios actuales.
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/3}
+		\includegraphics[width=8cm]{./Imagenes/3}
 		\end{center}	
 	          \end{itemize}
 %-----------------------------------------------------------------
@@ -120,7 +120,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
                      \begin{itemize}
                      \item Ingresar sus credenciales creadas en Docker Hub para iniciar sesión en el aplicativo.Ubicar la aplicación PowerShell, ejecutarla como Administrador. En la ventana de comandos de PowerShell escribir lo siguiente.
                      \begin{center}
-		\includegraphics[width=5cm]{./Imagenes/8}
+		\includegraphics[width=7cm]{./Imagenes/8}
 		\end{center}	
 		\item Para instalar MongoDB primero tenemos que ejecutar el siguiente codigo.
                      \begin{center}
@@ -132,27 +132,27 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\end{center}	
 		\item Verificar que el contenedor se este ejecutando correctamente mediante el comando:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/9}
+		\includegraphics[width=8cm]{./Imagenes/9}
 		\end{center}	
                      \item Proceder a verificar la imagen con el siguiente comando:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/10}
+		\includegraphics[width=8cm]{./Imagenes/10}
 		\end{center}	
                      \item Descargamos un fichero JSON  para subir luego a una base MongoDB:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/10}
+		\includegraphics[width=8cm]{./Imagenes/10}
 		\end{center}	
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/7}
+		\includegraphics[width=8cm]{./Imagenes/7}
 		\end{center}	
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/7}
+		\includegraphics[width=8cm]{./Imagenes/7}
 		\end{center}	
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/7}
+		\includegraphics[width=8cm]{./Imagenes/7}
 		\end{center}	
 	          \end{itemize}
 \subsection{Inserción y consulta de datos}
@@ -166,9 +166,10 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\item Las podemos utilizar por ejemplo para guardar puntos de un camino, relaciones de amigos, familia, o cualquier tipo de  dato que represente alguna relación
                      \item Entre los motores más conocidos de este tipo se encuentra Neo4j
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/4}
+		\includegraphics[width=8cm]{./Imagenes/4}
 		\end{center}	
 	          \end{itemize}
+.
 \subsection{Tabular (Column-Store)}
 \begin{itemize}
 		\item Este tipo de familia de bases de datos está orientada a grandes cantidades de datos
@@ -176,12 +177,13 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 		\item En una columna tiene múltiples datos
                      \item Entre los motores más conocidos de este tipo se encuentra Cassandra o HBase 
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/5}
+		\includegraphics[width=9cm]{./Imagenes/5}
 		\end{center}	
 	          \end{itemize} 
+.
 \subsection{Comparación entre BD Documental y Clave-Valor}
 		\begin{center}
-		\includegraphics[width=10cm]{./Imagenes/cuadro}
+		\includegraphics[width=10cm,height=10cm]{./Imagenes/cuadro}
 		\end{center}	
 %-----------------------------------------------------------------
 \section{Discusión y Conclusiones}\label{sec:5}
