--- a/TrabajoFinal-UII/Bibliografia.bib
+++ b/TrabajoFinal-UII/Bibliografia.bib
@@ -4,7 +4,7 @@
 author={GeeksforGeeks},
   title = {Difference between SQL and NoSQL} ,
   url = {https://www.geeksforgeeks.org/difference-between-sql-and-nosql/},
-  note = {Accessed: 2019-06-10}
+  note = {Accessed: 2019-06-20}
 }
 
 @book {sql,
@@ -16,6 +16,12 @@ author={GeeksforGeeks},
 }
 
 
+@online{kyocera,
+author={Kyocera Document Solutions},
+  title = {¿Qué son las bases de datos documentales?} ,
+  url = {https://smarterworkspaces.kyocera.es/blog/las-bases-datos-documentales/},
+  note = {Accessed: 2019-06-20}
+}
 
 
 
