--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -168,16 +168,17 @@ Las codificaciones más habituales de estos documentos suelen ser XML, YAML o JS
 \begin{center}
 	\includegraphics[width=8cm]{./Imagenes/documental1}
 \end{center}	
+.\\
 \textbf{Fundamentos del formato JSON :}
 \begin{itemize}
-		\item Pares de valores clave o atributos :  Con el formato JSON se almacena en un par de valores clave. A estos pares se les llama a veces atributos. Las claves son cadenas simples y los valores pueden ser de cualquier tipo.
-		\item Incrustación de objetos: Los valores incluidos en el par de valores clave también pueden ser otros objetos JSON, lo que permite crear una jerarquía de objetos. Colocar objetos JSON dentro de otro objeto JSON se denomina modelo de datos incrustados en base de datos documentales.
-		\item Matrices: El formato JSON trabaja con un lenguaje de programación natural en todos los lenguajes de programación y estructuras de datos que son las matrices, por lo cual se admite almacenamiento de matrices como valores contra una clave.
+		\item Pares de valores clave o atributos :  Con el formato JSON se almacena en un par de valores clave. A estos pares se les llama a veces atributos. Las claves son cadenas simples y los valores pueden ser de cualquier tipo.\cite{kyocera}
+		\item Incrustación de objetos: Los valores incluidos en el par de valores clave también pueden ser otros objetos JSON, lo que permite crear una jerarquía de objetos. Colocar objetos JSON dentro de otro objeto JSON se denomina modelo de datos incrustados en base de datos documentales.\cite{kyocera}
+		\item Matrices: El formato JSON trabaja con un lenguaje de programación natural en todos los lenguajes de programación y estructuras de datos que son las matrices, por lo cual se admite almacenamiento de matrices como valores contra una clave. \cite{kyocera}
 \end{itemize}
 \begin{center}
 	\includegraphics[width=9cm]{./Imagenes/documental2}
 \end{center}	
-.
+.\\
 \textbf{ Factores que influyen en la aceptación de una BD NoSQL documental :}
 \begin{itemize}
 		\item Adopción de un nuevo paradigma: Este factor de adaptarse al concepto de NoSQL, resulta ser relativamente difícil, ya que la gran mayoría de compañías se encuentran más familiarizadas con las bases de datos relacionales.
@@ -200,26 +201,23 @@ Las codificaciones más habituales de estos documentos suelen ser XML, YAML o JS
 .
 \subsection{Tabular (Column-Store)}
 \begin{itemize}
-		\item Este tipo de familia de bases de datos está orientada a grandes cantidades de datos
-		\item Lo datos son almacenados en columnas
-		\item En una columna tiene múltiples datos
-                     \item Entre los motores más conocidos de este tipo se encuentra Cassandra o HBase 
-                     \begin{center}
-		\includegraphics[width=9cm]{./Imagenes/5}
-		\end{center}	
+		\item Este tipo de familia de bases de datos está orientada a grandes cantidades de datos.
+		\item Lo datos son almacenados en columnas.
+		\item En una columna tiene múltiples datos.
+                     \item Entre los motores más conocidos de este tipo se encuentra Cassandra o HBase.
 	          \end{itemize} 
-.
+ \begin{center}
+	\includegraphics[width=9cm]{./Imagenes/5}
+\end{center}	
 \subsection{Comparación entre BD Documental y Clave-Valor}
 		\begin{center}
-		\includegraphics[width=10cm,height=10cm]{./Imagenes/cuadro}
+		\includegraphics[width=10cm,height=9cm]{./Imagenes/cuadro}
 		\end{center}	
 %-----------------------------------------------------------------
 \section{Discusión y Conclusiones}\label{sec:5}
-
 	\begin{itemize}
 		\item NoSQL permite el manejo de grandes volúmenes de datos y la posibilidad de tener un sistema distribuido.
 		\item Las características de las bases de datos NoSQL responden a las necesidades actuales de las diferentes organizaciones, por lo que son una alternativa debido a su capacidad y a la velocidad.
-
 	\end{itemize}
 
 
