--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -175,15 +175,15 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 	          \end{itemize}
 \subsection{Inserción y consulta de datos}
                      \begin{itemize}
-		\item Estas bases de datos utilizan el modelo de Grafos
+		\item conexion de Mongo,instancia de Mongo Corriendo dentro de este contenedor docker 
                       \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/26}
 		\end{center}	
-		\item Se especializan en relaciones
+		\item Se hace una prueba de Mongo DB,disparar ,para que asi  la base de datos consiga obtener la prueba de recoleccion de datos 
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/27}
 		\end{center}	
-                     \item Entre los motores más conocidos de este tipo se encuentra Neo4j
+                  
 	          \end{itemize}
 \subsection{Comparación}
 \subsection{Documental}
