--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -140,11 +140,11 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/16}
 		\end{center}	
-                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \item Para conectar  a nuestro localhost 
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/17}
 		\end{center}	
-                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \item Para exponer ese puerto para nuestro que podamos  acceder al contenedor
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/18}
 		\end{center}	
@@ -160,15 +160,15 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/22}
 		\end{center}
-                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \item En PowerShell ejecutar el siguiente comando ,Verificar la eliminación del contenedor con ejecutando
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/23}
 		\end{center}	
-                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                      \item  Seguidamente ejecutar el comando:Como respuesta se visualizará un ID que corresponde al contenedor
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/24}
 		\end{center}	
-                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
+                     \item Para conectar  a nuestro localhost 
                      \begin{center}
 		\includegraphics[width=6cm]{./Imagenes/25}
 		\end{center}		
