--- a/TrabajoFinal-UII/Bibliografia.bib
+++ b/TrabajoFinal-UII/Bibliografia.bib
@@ -1,5 +1,3 @@
-
-
 @online{comparison,
 author={GeeksforGeeks},
   title = {Difference between SQL and NoSQL} ,
@@ -7,12 +5,12 @@ author={GeeksforGeeks},
   note = {Accessed: 2019-06-20}
 }
 
-@book {sql,
-    author  = "Date, C.",
-    title   = "Introducción a los sistemas de bases de datos",
-    journal = "Pearson Educación",
-    year    = "2001",
-    pages   = "83",
+@book {proyecto,
+    author  = "Herranz Gómez, R.",
+    title   = "BASES DE DATOS NOSQL: ARQUITECTURA Y EJEMPLOS DE APLICACIÓN",
+    journal = "Universidad Carlos III de Madrid",
+    year    = "2014",
+    pages   = "159",
 }
 
 
@@ -24,5 +22,12 @@ author={Kyocera Document Solutions},
 }
 
 
+
+@online{imagen,
+author={Amazon},
+  title = {¿Qué es una base de datos de documentos?} ,
+  url = {https://aws.amazon.com/es/nosql/document/},
+  note = {Accessed: 2019-06-20}
+}
 
 
